--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital clock | Kr.amit singh</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="box">
+        <div class="time">
+            <p><span>00</span>:<span>00</span>:<span>00</span></p>
+        </div>
+    </div>
 </body>
 </html>
