--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="box">
         <div class="time">
-            <p><span>00</span>:<span>00</span>:<span>00</span></p>
+            <p><span id="hour">00</span>:<span id="min"></span>:<span id="sec">00</span></p>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
